# Phylo-research

./: .gitignore
Performance evaluation/: CMakeLists.txt  extractSubStrings.cpp
db/: Canarypox.fasta  Sulfolobus.fasta
db/CV_blast/: CV.nhr  CV.nin  CV.nnd  CV.nni  CV.nog  CV.nsd  CV.nsi  CV.nsq
db/Ecoli_blast/: EC.nhr  EC.nin  EC.nnd  EC.nni  EC.nog  EC.nsd  EC.nsi
db/O_blast/: O.nhr  O.nin  O.nnd  O.nni  O.nog  O.nsd  O.nsi  O.nsq
db/S_blast/: SI.nhr  SI.nin  SI.nnd  SI.nni  SI.nog  SI.nsd  SI.nsi  SI.nsq
db/tests/: CVbatch.fasta  CVbatch10.fasta  CVbatch100.fasta  CVbatch1000.fasta  ECbatch.fasta  ECbatch10.fasta  ECbatch100.fasta  ECbatch1000.fasta  Obatch.fasta  Obatch10.fasta  Obatch100.fasta  Obatch1000.fasta  SIbatch.fasta  SIbatch10.fasta  SIbatch100.fasta  SIbatch1000.fasta
programs/: CMakeLists.txt
programs/SHC/: CMakeLists.txt  SimHash.cpp  main.cpp
programs/SHC/Utils/: FastaParser.cpp  FastaParser.h  Help.cpp
programs/SHC_prototype/: Clusterer.py  RobertSimHash.txt  SimHash.py  SimHashGenerator.py  cluster.txt  clusterk8h3.txt  completeGenomesSimHash4.txt  (+2 more)
programs/SeqClust/: CMakeLists.txt  main.cpp
programs/SeqClust/ClusterAlgorithms/: Sequential.cpp  Sequential.h
programs/SeqClust/Utils/: HashParser.cpp  HashParser.h  Help.cpp
programs/SeqHash/: CMakeLists.txt  SimHash.cpp  SimHash.h  main.cpp  test_10_genes.txt
programs/SeqHash/HashFunctions/Blash/: Blash.cpp  Blash.h
programs/SeqHash/Utils/: AlphabetReduction.cpp  AlphabetReduction.h  FastaParser.cpp  Help.cpp  Help.h  ScoreMatrix.cpp  ScoreMatrix.h
programs/SeqHash/Utils/AlphabetReductions/: 10mapper.txt
query/: q1  q1~
results/: Performance evaluation.ipynb  hsblastnThread1.txt~  test.csv
(+212 files in other folders)
